--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".SplashScreenActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,10 +20,21 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" />
+        <activity
             android:name=".ClosetActivity"
             android:label="@string/title_activity_closet"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ViewImage"></activity>
+        <activity android:name=".ViewImage" />
+        <activity android:name=".WomanStyleActivity" />
+        <activity android:name=".PareShapeActivity" />
+        <activity android:name=".AppleShapeActivity" />
+        <activity android:name=".HourglassShapeActivity" />
+        <activity android:name=".RectangleActivity" />
+        <activity android:name=".CollectionActivity" />
+        <activity android:name=".CreateCollectionActivity"></activity>
     </application>
 
 </manifest>
